# OpenGLTempl

./: .gitmodules  CMakeLists.txt  Makefile  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
